# tana-syu-ke-

./: .gitignore  README.md  shukei-tool.html
.github/workflows/: build-windows-tauri.yml
windows-tool/: copy-html.js  package.json
windows-tool/src-tauri/: Cargo.toml  tauri.conf.json
windows-tool/src-tauri/src/: main.rs
