[package]
name = "tanaoroshi-shukei-tool"
version = "0.1.0"
description = "棚卸集計ツール"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
